src/test/ui/occurs-check-2.stderr
error[E0308]: mismatched types
  --> $DIR/occurs-check-2.rs:6:9
   |
LL |     g = f;
   |         ^ cyclic type of infinite size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
